# simple-simulator

./: README.md  pyproject.toml  voice_test_framework_design.jsx
scenarios/: hotel_booking_basic.yaml  hotel_booking_interrupt.yaml  hotel_booking_noisy.yaml  screen_share_help.yaml  stress_test_100_turns.yaml
src/: recorder.py
src/voice_test_framework/: __init__.py
src/voice_test_framework/adapters/: __init__.py  custom_websocket.py  openai_realtime.py
src/voice_test_framework/core/: __init__.py  clock.py  interfaces.py  orchestrator.py  results.py
src/voice_test_framework/evaluation/: __init__.py  accuracy.py  framework.py  latency.py  naturalness.py  robustness.py
src/voice_test_framework/reporting/: __init__.py  html_report.py  junit.py  regression.py
src/voice_test_framework/simulation/: __init__.py  audio.py  barge_in.py  network.py  noise.py  physical_world.py  video.py
src/voice_test_framework/tools/: __init__.py  asserter.py  builtin_mocks.py  registry.py
tests/: conftest.py  test_barge_in.py  test_core.py  test_evaluation.py  test_hotel_booking.py  test_noise_robustness.py  test_recorder.py  test_reporting.py  test_simulation.py  test_tools.py
vla_synthesis/src/: scene_manager.py
vla_synthesis/tests/: test_scene_manager.py
