[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-test-framework"
version = "0.1.0"
description = "End-to-end testing framework for real-time voice conversation AI systems"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Voice Test Framework Contributors" },
]

dependencies = [
    "pyyaml>=6.0",
    "websockets>=12.0",
    "numpy>=1.26",
    "jinja2>=3.1",
    "aiohttp>=3.9",
    "h5py>=3.10",
]

[project.optional-dependencies]
tts = [
    "azure-cognitiveservices-speech>=1.35",
    "google-cloud-texttospeech>=2.16",
]
llm = [
    "anthropic>=0.39",
    "openai>=1.50",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
